--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^5.11.1",
+    "firebase-tools": "^6.8.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.5.5",
+    "vuex": "^3.0.1",
+    "vuex-easy-firestore": "^1.33.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
-    "vue-template-compiler": "^2.5.21"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   }
 }
